<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LightNovel</string>
    <string name="love_app">Love a free light novel?</string>
    <string name="book_mail">BookMall</string>
    <string name="book_shelf">Bookshelf</string>
    <string name="my">Me</string>
    <string name="type">Type</string>
    <string name="daily">Daily recommendation</string>
    <string name="end_book">Finished Edition</string>
    <string name="rank">Ranking</string>
    <string name="big_hot_title">Hot list</string>
    <string name="click_title">Click list</string>
    <string name="recommend_title">Recommendation list</string>
    <string name="end_title">Finish the list</string>
    <string name="end_title2">Closing list</string>
    <string name="hot_search_title">Hot search list</string>
    <string name="copy_complete">Copied successfully</string>
    <string name="double_click_exit">Tap again to exit the program</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="data_loading">Loading…</string>
    <string name="content_empty">No content</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="set_timer">Timer</string>
    <string name="tts_fix">Please install and select Chinese TTS!</string>
    <string name="tts_init_failed">TTS initialization failed!</string>
    <string name="read_aloud">Speech</string>
    <string name="read_aloud_t">Speaking</string>
    <string name="read_aloud_s">Click to open the Reading</string>
    <string name="read_aloud_pause">Speak Paused</string>
    <string name="read_aloud_timer">Speaking(%d min left)</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="starting_download">Starting download</string>
    <string name="already_in_download">This book is already in Download list</string>
    <string name="error_get_book_info">Failed to obtain book information</string>
    <string name="error_get_content">Failed to obtain content</string>
    <string name="error_get_chapter_list">Failed to obtain chapters list</string>
    <string name="error_get_web_content">Failed to access website:%s</string>
    <string name="error_read_file">Failed to read file</string>
    <string name="error_load_toc">Failed to load chapters list</string>
    <string name="error_get_data">Failed to get data</string>
    <string name="error_load_msg">Failed to load\n%s</string>
    <string name="net_error_10001">No network</string>
    <string name="net_error_10002">Network connection timeout</string>
    <string name="net_error_10003">Data parsing failed</string>
    <string name="network_request_failed">Network request failed</string>
    <string name="no_prev_page">No prior page</string>
    <string name="no_next_page">No next page</string>
    <string name="action_download">Download</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">OK</string>
    <string name="page_anim_cover">Cover</string>
    <string name="page_anim_slide">Slide</string>
    <string name="page_anim_simulation">Simulation</string>
    <string name="page_anim_scroll">Scroll</string>
    <string name="page_anim_none">None</string>
    <string name="btn_default_s">Default</string>
    <string name="page_anim">Flip animation</string>
    <string name="chapter">Chapter</string>
    <string name="to">To</string>
    <string name="bookmark">Bookmarks</string>
    <string name="bookmark_add">Add to Bookmarks</string>
    <string name="action_del">Delete</string>
    <string name="load_over_time">Loading timeout</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="note_content">Remarks section</string>
    <string name="set_charset">Text encoding</string>
    <string name="select_end">Select end</string>
    <string name="select_start">Select start</string>
    <string name="interface_setting">Interface</string>
    <string name="brightness">Brightness</string>
    <string name="chapter_list">Chapters</string>
    <string name="next_chapter">Next</string>
    <string name="previous_chapter">Prior</string>
    <string name="setting">Settings</string>
    <string name="search_content">Search content</string>
    <string name="dark_theme">Dark mode</string>
    <string name="aloud_config">Speech settings</string>
    <string name="main_menu">Main menu</string>
    <string name="auto_page_speed">Auto scroll speed</string>
    <string name="more_menu">More menu</string>
    <string name="more">More</string>
    <string name="default1">Default-1</string>
    <string name="default2">Default-2</string>
    <string name="default3">Default-3</string>
    <string name="title">Title</string>
    <string name="title_left">Left</string>
    <string name="title_center">Center</string>
    <string name="title_hide">Hide</string>
    <string name="brightness_auto">Auto-Brightness %s</string>
    <string name="read_aloud_by_page">Speak by pages</string>
    <string name="speak_engine">Speak Engine</string>
    <string name="local_tts">Local TTS</string>
    <string name="search">Search</string>
    <string name="go_to_top">Scroll to the top</string>
    <string name="go_to_bottom">Scroll to the bottom</string>
    <string name="success">Success</string>
    <string name="toc_updateing">Updating Chapters</string>
    <string name="author">Author</string>
    <string name="img_cover">Cover</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="book_info">Book information</string>
    <string name="update_toc">Update chapters</string>
    <string name="copy_text">Copy</string>
    <string name="refresh">Refresh</string>
    <string name="alouding_disable">The selected text cannot be spoken in full text speech</string>
    <string name="book_word">%d萬字</string>
    <string name="man_channel">Boys</string>
    <string name="woman_channel">Girls</string>
    <string name="other_channel">Other categories</string>
    <string name="similar_recommend">Similar recommendation</string>
    <string name="book_detail">Book details</string>
    <string name="remove_from_bookshelf">Remove</string>
    <string name="start_read">Start reading</string>
    <string name="reading">Read</string>
    <string name="add_to_shelf">Add to Bookshelf</string>
    <string name="continue_read">Continue reading</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="search_hot">Hot Search</string>
    <string name="search_history">Search History</string>
    <string name="empty_info" tools:ignore="MissingTranslation"> </string>
    <string name="text_bold">Bold</string>
    <string name="text_font">Font</string>
    <string name="text">Text</string>
    <string name="simple_font">简体</string>
    <string name="traditional_font">繁体</string>
    <string name="good_text">If you think we are doing well, please give us a five-star praise to encourage</string>
    <string name="no_google">Google App store not detected</string>
    <string name="feedback">Feedback</string>
    <string name="evaluate">Evaluate</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="feedback_not_empty">Feedback content cannot be empty</string>
    <string name="feedback_success">Feedback successful, we will solve your problem as soon as possible</string>
    <string name="feedback_hint">In order to better solve the problem you encountered, please try to describe the problem in detail. Such as providing the name and phenomenon of books.</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="flow_sys">Follow system</string>
    <string name="read_aloud_speed">Speech rate</string>
    <string name="timer_m">%d min</string>
    <string name="prev_sentence">Prior sentence</string>
    <string name="next_sentence">Next sentence</string>
    <string name="audio_play">Play</string>
    <string name="audio_play_t">Playing</string>
    <string name="audio_play_s">Click to open the Playing</string>
    <string name="audio_pause">Pause</string>
    <string name="to_backstage">Background</string>
    <string name="layout_list">List</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="arrange_bookshelf">Bookshelf arrangement</string>
    <string name="view">View</string>
    <string name="swap_sort">Ascending/Descending order</string>
    <string name="sort">Sort</string>
    <string name="sort_auto">Sort automatically</string>
    <string name="sort_manual">Sort manually</string>
    <string name="sort_pin_yin">Sort phonetically</string>
    <string name="bookshelf_px_0">By recent list</string>
    <string name="bookshelf_px_1">By update time</string>
    <string name="bookshelf_px_2">By book title</string>
    <string name="bookshelf_px_3">By sort manually</string>
    <string name="language">Language</string>
    <string name="other_setting">Other settings</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_success">Cache cleared</string>
    <string name="clear_cache_summary">Clear the cache of the downloaded books and fonts</string>
    <string name="sure_del">Are you sure to delete it?</string>
    <string name="sure_del_all_book">Are you sure to delete all books？</string>
    <string name="sure_del_download_book">Do you want to delete the downloaded book chapters at the same time?</string>
    <string name="check_update">Check for Updates</string>
    <string name="version">Version</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="new_version">新版本V %s</string>
    <string name="download_loading">%d/%d</string>
    <string name="downloading">正在下載</string>
    <string name="update_now">立即更新</string>
    <string name="jump_ad">Skip</string>
    <string name="chinese_converter">Simplified conversion</string>
    <string name="text_font_weight_converter">Text font weight switching</string>
    <string name="draw">Warning</string>
    <string name="read_record">Read record</string>
    <string name="read_record_summary">Read record summary</string>
    <string name="clear">Clear</string>
    <string name="theme_setting">Theme settings</string>
    <string name="praise">Praise</string>
    <string name="many_book_free">Read a large number of popular novels for free</string>
    <string name="reserved">©2021 LightNovel \n All Right Reserved</string>
    <string name="about">About Us</string>
    <string name="google_login">Starting Google login</string>
    <string name="buy_vip">Click to open</string>
    <string name="login_now">Click login</string>
    <string name="welcome_use">Welcome to the LightNovel</string>
    <string name="g_login">Google account login</string>
    <string name="user_login">User login</string>
    <string name="privacy">Terms of service</string>
</resources>