<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_download_line"
        android:title="@string/offline_cache"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_add_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmark_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_copy_text"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy_text"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_page_anim"
        android:icon="@drawable/ic_auto_page"
        android:title="@string/page_anim"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_update_toc"
        android:icon="@drawable/ic_update"
        android:title="@string/update_toc"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_book_info"
        android:icon="@drawable/ic_toc"
        android:title="@string/book_info"
        app:showAsAction="never" />

</menu>
