<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.novel.read.ui.widget.prefs.PreferenceCategory
        android:title="@string/aloud_config"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">

        <com.novel.read.ui.widget.prefs.SwitchPreference
            android:defaultValue="false"
            android:title="@string/read_aloud_by_page"
            android:key="readAloudByPage"
            app:iconSpaceReserved="false" />

        <com.novel.read.ui.widget.prefs.Preference
            android:defaultValue="false"
            android:title="@string/speak_engine"
            android:summary="本地TTS"
            android:key="speakEngine"
            app:iconSpaceReserved="false" />

    </com.novel.read.ui.widget.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>