<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feedback.FeedBackActivity">

    <com.novel.read.ui.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:attachToActivity="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/feedback" />


    <EditText
        android:id="@+id/et_feed"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/bg_feedback"
        android:hint="@string/feedback_hint"
        android:padding="10dp"
        android:maxLines="5"
        android:textSize="15sp"
        android:gravity="start"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar" />


    <Button
        android:id="@+id/button_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_feedback"
        android:background="@color/primary"
        android:layout_marginTop="15dp"
        android:textColor="@color/tv_text_book_detail"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_feed"/>

</androidx.constraintlayout.widget.ConstraintLayout>