<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <com.novel.read.ui.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:attachToActivity="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/user_login" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/icon_read_book"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"/>


    <TextView
        android:id="@+id/tv_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:layout_margin="15dp"
        android:textColor="@color/secondaryText"
        android:text="@string/many_book_free"/>



    <TextView
        android:id="@+id/tv_g_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_des"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_login"
        android:paddingVertical="10dp"
        android:paddingHorizontal="25dp"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="15dp"
        android:text="@string/g_login"/>



</androidx.constraintlayout.widget.ConstraintLayout>