<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBg"
    tools:context=".activity.NovelSearchActivity">


    <include
        android:id="@+id/search_title"
        layout="@layout/title_search" />


    <com.novel.read.widget.HeadLayout
        android:id="@+id/head_hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headImg="@drawable/ic_hot"
        app:headText="@string/search_hot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_title"
        app:rightText="@string/more"
        app:showRightText="false" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rlv_hot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_hot" />


    <com.novel.read.widget.HeadLayout
        android:id="@+id/head_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headImg="@drawable/ic_history"
        app:headText="@string/search_history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlv_hot"
        app:rightImg="@drawable/ic_delete_search"
        app:showRightText="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rlv_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head_history" />


    <com.novel.read.widget.RefreshLayout
        android:id="@+id/refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/appBg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_title"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlv_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/appBg" />
    </com.novel.read.widget.RefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>