<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

<!--    <com.yjd.tuzibook.ui.widget.ATECheckBox-->
<!--        android:id="@+id/checkbox"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="10dp"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.novel.read.ui.widget.image.CoverImageView
        android:id="@+id/iv_book"
        android:layout_width="60dp"
        android:layout_height="75dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="8dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/image_cover_default"
        android:transitionName="img_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:text="@string/book_name"
        android:textColor="@color/primaryText"
        app:layout_constraintRight_toLeftOf="@+id/tv_delete"
        app:layout_constraintHorizontal_bias="0"
        android:maxLines="1"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="@+id/iv_book"
        app:layout_constraintBottom_toTopOf="@+id/tv_author"
        app:layout_constraintLeft_toRightOf="@+id/iv_book" />


    <TextView
        android:id="@+id/tv_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_marginStart="10dp"
        android:hint="@string/author"
        android:textSize="12sp"
        android:singleLine="true"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toRightOf="@+id/iv_book"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintBottom_toBottomOf="@+id/iv_book"
        app:layout_constraintRight_toLeftOf="@+id/tv_delete" />


    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:text="@string/delete"
        app:layout_constraintLeft_toRightOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/iv_book"
        app:layout_constraintBottom_toBottomOf="@+id/iv_book"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>